# spacedrive

./: .TODO  .dockerignore  .easignore  .editorconfig  .env  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.json  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.cli.js  .prettierrc.js  .prettierrc.json  .railwayignore  .rustfmt.toml  .taplo.toml  .typos.toml  2025-11-24-we-need-to-get-this-test-updated.txt  AGENTS.md  API_DESIGN_DOC.md  ARCHITECTURE.md  ARCHITECTURE_EVENT_NAVIGATION.md  CACHE_CODE_REFERENCES.md  CACHE_INVESTIGATION_INDEX.md  CACHE_INVESTIGATION_SUMMARY.md  CACHE_QUICK_REFERENCE.md  CHANGELOG.md  CLI_LIBRARY_SYNC_COMPLETE.md  CODE_MAP.md  CODE_OF_CONDUCT.md  COMPLETE_SYSTEM_SUMMARY.md  CONTENT_KIND_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  (+100 more)
apps/cli/: Cargo.toml  README.md
apps/debug/: Cargo.toml
apps/deps-generator/: Cargo.toml
apps/gpui-photo-grid/: Cargo.toml  KNOWN_ISSUES.md  QUICKSTART.md  README.md  run.sh
apps/graphql/: Cargo.toml
apps/lifesupport/: Cargo.toml  README.md  build.rs  service.capnp
apps/p2p-relay/: Cargo.toml  deploy.sh
apps/server/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  TRUENAS_SETUP.md  build-for-truenas.sh  build.rs  docker-compose.yml  docker-run.sh  package.json  turbo.json
core/: .gitignore  .rustfmt.toml  :memory:  AGENTS.md  Cargo.toml  IROH_REFACTOR_IMPLEMENTATION.md  IROH_USAGE_ANALYSIS.md  PAIRING_FIX_PLAN.md  PAIRING_POST_SUCCESS_ISSUES.md  PAIRING_PROTOCOL_ANALYSIS.md  PAIRING_SECURITY_ISSUES.md  README.md  bruh.json  build.rs  crush.json  device.json  index.ts  master_key  package.json  turbo.json
core-new/: AGENTS.md  API_COMPARISON.md  COPY_BUILDER_USAGE.md  Cargo.toml  DESIGN_FILE_DATA_MODEL_VISUAL.md  DESIGN_OPTIMIZED_STORAGE.md  INDEXER_DEMO.md  INPUT_ABSTRACTION_ARCHITECTURE.md  JOB_CLEANUP_FIX.md  PARENT_ID_IMPLEMENTATION.md  PAUSE_RESUME_TEST_RESULTS.md  README.md  SHUTDOWN_PAUSE_TEST_RESULTS.md  VDFS_MODEL_VISUAL.md  build.rs  combine_docs.sh  combine_rust.sh  combined_docs.txt  combined_rust_files.txt  fix_job_system.md  run_file_copy_tests.sh  run_pairing_tests.sh  test_parent_id.sh  update_spacedrive.sh
core-new/.scripts/: combine.sh  validate_tasks.py
core-new/.tasks/: ACT-001-action-manager-registry.md  AI-000-ai-epic.md  AI-001-ai-agent.md  CLOUD-001-design-cloud-core-infra.md  CLOUD-002-implement-relay-server.md  CLOUD-003-implement-cloud-volume.md  CORE-001-entry-centric-model.md  CORE-002-sdpath-addressing.md  CORE-003-content-identity.md  CORE-004-closure-table.md  CORE-005-file-type-system.md  CORE-006-implement-semantic-tagging-architecture.md  CORE-007-implement-quantum-state-for-on-demand-state-computation.md  CORE-007-quantum-state-for-on-demand-state-computation.md  CORE-008-implement-virtual-sidecar-system.md  CORE-008-virtual-sidecar-system.md  CORE-009-implement-user-managed-collections.md  CORE-010-file-ingestion-workflow.md  CORE-010-implement-file-ingestion-workflow.md  DEV-001-multi-process-test-framework.md  FILE-000-file-operations.md  FILE-001-file-copy-job.md  FILE-002-file-deletion-job.md  INDEX-000-indexing-file-management.md  INDEX-001-implement-location-watcher-service.md  INDEX-001-location-watcher-service.md  INDEX-002-implement-stale-file-detection-algorithm.md  INDEX-002-stale-file-detection-algorithm.md  JOB-001-job-manager.md  JOB-002-job-logging.md  LOC-001-location-management-actions.md  LOC-005-virtual-locations-via-pure-hierarchical-model.md  LSYNC-001-design-library-sync-protocol.md  LSYNC-002-implement-metadata-sync.md  LSYNC-002-metadata-sync.md  LSYNC-003-file-op-sync.md  LSYNC-003-implement-file-op-sync.md  LSYNC-004-implement-sync-relationship-database-schema.md  NET-000-networking.md  NET-001-iroh-p2p-stack.md  (+37 more)
core-new/benchmarks/: Cargo.toml
core-new/docs/: LIGHTNING_SEARCH_DESIGN.md  README.md  VOLUME_TRACKING_IMPLEMENTATION_PLAN.md  architecture.md  benchmarks.md  cli-output-refactor.md  cli.md  database.md  domain-models.md  examples.md  history.md  indexer-scope-upgrade.md  indexing.md  job-system.md  library.md  locations.md  networking.md  pairing.md  philosophy.md  roadmap.md  task-tracking.md  testing.md  virtual_sidecars.md  volume-system.md  whitepaper.md
core-new/examples/: cli_demo.rs  cli_demo.sh  content_indexing.rs  database_test.rs  desktop_indexing_demo.rs  device_pairing_demo.rs  file_type_demo.rs  frontend_usage.tsx  graphql_api.rs  indexing_demo.rs  indexing_showcase.rs  job_demo.rs  library_demo.rs  library_demo_lifecycle.rs  location_watcher_demo.rs  networking_demo.rs  networking_pairing_demo.rs  pairing_unit_test.rs  pause_resume_demo.rs  persistent_networking_demo.rs  production_job_dispatch_demo.rs  production_pairing_demo.rs  shutdown_demo.rs  simple_db_test.rs  simple_libp2p_demo.rs  simple_pause_resume.rs  test_job_cleanup.rs  test_migration.rs  volume_demo.rs
core-new/spacedrive-demo-data/: device.json  spacedrive.json
core-new/spacedrive-jobs-derive/: Cargo.toml
core-new/src/: context.rs  lib.rs
core-new/task-validator/: Cargo.toml
core-new/tests/: README.md  cas_generation_test.rs  cli_pairing_integration.rs  cli_pairing_integration_enhanced.rs  cli_pairing_integration_simple.rs  cli_pairing_integration_subprocess.rs  cli_pairing_real_commands.rs  copy_action_dispatch_test.rs  copy_action_integration_test.rs  copy_action_simple_test.rs  copy_action_test.rs  copy_fixes_validation.rs  copy_progress_monitor_test.rs  copy_progress_test.rs  core_file_copy_test.rs  core_pairing_subprocess_test.rs  core_pairing_test.rs  core_pairing_test_new.rs  database_migration_test.rs  device_pairing_test.rs  device_persistence_test.rs  event_system_test.rs  file_copy_integration_test.rs  file_copy_test_analysis.md  file_transfer_test.rs  file_transfer_unit_test.rs  indexer_database_test.rs  indexer_integration_test.rs  indexer_job_test.rs  indexing_rules_test.rs  indexing_test.rs  integration_networking.rs  job_pause_resume_test.rs  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
xtask/: Cargo.toml  README.md
(+6857 files in other folders)
