[workspace]
members = [
	"apps/desktop/crates/*",
	"apps/desktop/src-tauri",
	"apps/mobile/modules/sd-core/android/crate",
	"apps/mobile/modules/sd-core/core",
	"apps/mobile/modules/sd-core/ios/crate",
	"apps/server",
	"core",
	"core/crates/*",
	"crates/*"
]
resolver = "2"

[workspace.package]
edition      = "2021"
license      = "AGPL-3.0-only"
repository   = "https://github.com/spacedriveapp/spacedrive"
rust-version = "1.81"

[workspace.dependencies]
# First party dependencies
sd-cloud-schema = { git = "https://github.com/spacedriveapp/cloud-services-schema", rev = "99d59e8fab" }

# Third party dependencies used by one or more of our crates
async-channel       = "2.3"
async-stream        = "0.3.6"
async-trait         = "0.1.83"
axum                = "0.7.7"
axum-extra          = "0.9.4"
base64              = "0.22.1"
blake3              = "1.5.4"
bytes               = "1.7.1"                                          # Update blocked by hyper
chrono              = "0.4.38"
ed25519-dalek       = "2.1"
flume               = "0.11.0"
futures             = "0.3.31"
futures-concurrency = "7.6"
globset             = "0.4.15"
http                = "1.1"
hyper               = "1.5"
image               = "0.25.4"
itertools           = "0.13.0"
lending-stream      = "1.0"
libc                = "0.2.159"
mimalloc            = "0.1.43"
normpath            = "1.3"
pin-project-lite    = "0.2.14"
rand                = "0.9.0-alpha.2"
regex               = "1.11"
reqwest             = { version = "0.12.8", default-features = false }
rmp                 = "0.8.14"
rmp-serde           = "1.3"
rmpv                = { version = "1.3", features = ["with-serde"] }
serde               = "1.0"
serde_json          = "1.0"
specta              = "=2.0.0-rc.20"
strum               = "0.26"
strum_macros        = "0.26"
tempfile            = "3.13"
thiserror           = "1.0"
tokio               = "1.40"
tokio-stream        = "0.1.16"
tokio-util          = "0.7.12"
tracing             = "0.1.40"
tracing-subscriber  = "0.3.18"
tracing-test        = "0.2.5"
uhlc                = "0.8.0"                                          # Must follow version used by specta
uuid                = "1.10"                                           # Must follow version used by specta
webp                = "0.3.0"
zeroize             = "1.8"

[workspace.dependencies.rspc]
git = "https://github.com/spacedriveapp/rspc.git"
rev = "6a77167495"

[workspace.dependencies.prisma-client-rust]
default-features = false
features         = ["migrations", "specta", "sqlite", "sqlite-create-many"]
git              = "https://github.com/spacedriveapp/prisma-client-rust"
rev              = "b22ad7dc7d"

[workspace.dependencies.prisma-client-rust-sdk]
default-features = false
features         = ["sqlite"]
git              = "https://github.com/spacedriveapp/prisma-client-rust"
rev              = "b22ad7dc7d"

# Proper IOS Support
[patch.crates-io.if-watch]
git = "https://github.com/spacedriveapp/if-watch.git"
rev = "a92c17d3f8"

# Add `Control::open_stream_with_addrs`
[patch.crates-io.libp2p]
git = "https://github.com/spacedriveapp/rust-libp2p"
rev = "1024411ffa"
[patch.crates-io.libp2p-core]
git = "https://github.com/spacedriveapp/rust-libp2p"
rev = "1024411ffa"
[patch.crates-io.libp2p-identity]
git = "https://github.com/spacedriveapp/rust-libp2p"
rev = "1024411ffa"
[patch.crates-io.libp2p-swarm]
git = "https://github.com/spacedriveapp/rust-libp2p"
rev = "1024411ffa"
[patch.crates-io.libp2p-stream]
git = "https://github.com/spacedriveapp/rust-libp2p"
rev = "1024411ffa"

[profile.dev]
# Make compilation faster on macOS
codegen-units   = 256
debug           = 0
incremental     = true
lto             = false
opt-level       = 0
split-debuginfo = "unpacked"
strip           = "none"

[profile.dev-debug]
inherits = "dev"
# Enables debugger
codegen-units   = 256
debug           = "full"
incremental     = true
lto             = "off"
opt-level       = 0
split-debuginfo = "none"
strip           = "none"

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Set the default for dependencies, except workspace members.
[profile.dev.package."*"]
incremental = false
opt-level   = 3

# Set the default for dependencies, except workspace members.
[profile.dev-debug.package."*"]
debug       = "full"
incremental = false
inherits    = "dev"
opt-level   = 3

# Optimize release builds
[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
lto           = true     # Enables link to optimizations
opt-level     = "s"      # Optimize for binary size
panic         = "unwind" # Sadly we need unwind to avoid unexpected crashes on third party crates
strip         = true     # Remove debug symbols
