[package]
name = "sd-core-new"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "uuid", "with-json", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# API (temporarily disabled)
# axum = "0.7"
# async-graphql = "7.0"
# async-graphql-axum = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
int-enum = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"


# File operations
notify = "6.1"  # File system watching
blake3 = "1.5"  # Content addressing
sha2 = "0.10"   # SHA-256 hashing for CAS IDs
hex = "0.4"     # Hex encoding for volume fingerprints

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Job system dependencies
rmp-serde = "1.3"     # MessagePack serialization for job state
inventory = "0.3"     # Automatic job registration
sd-task-system = { path = "../crates/task-system" }

# Utils
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
dirs = "5.0"
whoami = "1.5"
rand = "0.8"  # Random number generation for secure delete

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"
comfy-table = "7.1"

# Platform specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "spacedrive"
path = "src/bin/cli.rs"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"