[package]
name = "sd-core-new"
version = "0.1.0"
edition = "2021"

[features]
default = []
# FFmpeg support for video thumbnails
ffmpeg = ["dep:sd-ffmpeg"]

[workspace]
members = [
    "benchmarks",
]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "uuid", "with-json", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# API (temporarily disabled)
# axum = "0.7"
# async-graphql = "7.0"
# async-graphql-axum = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
int-enum = "1.1"
strum = { version = "0.26", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"


# File operations
notify = "6.1"  # File system watching
blake3 = "1.5"  # Content addressing
sha2 = "0.10"   # SHA-256 hashing for CAS IDs
hex = "0.4"     # Hex encoding for volume fingerprints

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Indexer rules engine
globset = { version = "0.4", features = ["serde1"] }
gix-ignore = { version = "0.11", features = ["serde"] }
futures-concurrency = "7.6"

# Job system dependencies
rmp = "0.8"           # MessagePack core types
rmp-serde = "1.3"     # MessagePack serialization for job state
inventory = "0.3"     # Automatic job registration
sd-task-system = { path = "../crates/task-system" }
spacedrive-jobs-derive = { path = "spacedrive-jobs-derive" } # Job derive macros

# Media processing dependencies
sd-images = { path = "../crates/images" }
sd-ffmpeg = { path = "../crates/ffmpeg", optional = true }
webp = "0.3"
image = "0.25"
tokio-rustls = "0.26"

# Networking
# Iroh P2P networking
iroh = "0.28"
iroh-net = "0.28"
iroh-blobs = "0.28"
iroh-gossip = "0.28"

# Serialization for protocols
serde_cbor = "0.11"

# Cryptography for signing (backward compatibility)
ed25519-dalek = "2.1"

# Legacy networking (kept for compatibility during transition)
mdns-sd = "0.13"             # mDNS service discovery (DEPRECATED - use libp2p DHT)
snow = "0.9"                # Noise Protocol encryption (DEPRECATED - use libp2p noise)
ring = "0.16"               # Crypto primitives
argon2 = "0.5"              # Password derivation
aes-gcm = "0.10"            # AES-GCM encryption for secure storage
async-stream = "0.3"        # File streaming
backoff = "0.4"             # Retry logic
bincode = "2.0.0-rc.3"      # Efficient encoding
# futures-util = "0.3"        # WebSocket utilities (disabled for now)
rustls = { version = "0.23", features = ["aws_lc_rs"] } # TLS implementation (DEPRECATED - use libp2p noise)
rcgen = "0.11"              # Certificate generation (DEPRECATED - use libp2p noise)
tokio-stream = "0.1"        # Async streams

# BIP39 wordlist support
bip39 = "2.0"

# Additional cryptography
chacha20poly1305 = "0.10"    # Authenticated encryption for chunk-level security
hkdf = "0.12"                # Key derivation function for session keys
x25519-dalek = "2.0"
hmac = "0.12"

# Network utilities
if-watch = "3.0"
local-ip-address = "0.5"
# colored already defined above

# Utils
uuid = { version = "1.11", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
dirs = "5.0"
whoami = "1.5"
rand = "0.8"  # Random number generation for secure delete
tempfile = "3.14"  # Temporary directories for testing

# Secure storage
keyring = "3.6"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"
comfy-table = "7.1"
owo-colors = "4.1"
supports-color = "3.0"

# Platform specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "spacedrive"
path = "src/bin/cli.rs"



[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
