[package]
name = "spacedrive"
version = "0.1.0"
description = "The next gen private virtual filesystem."
authors = ["you"]
license = ""
repository = ""
default-run = "spacedrive"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
tauri = { version = "1.0.0-beta.5", features = ["api-all", "menu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rebind = "0.2.1"
data-encoding = "2.3.2"
ring = "0.17.0-alpha.10"
rusqlite = "0.25.3"
chrono = { version = "0.4.0", features = ["serde"] }
crossbeam = "0.8.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
