[package]
name = "sd"
version = "0.1.0"
description = "The next gen private virtual filesystem."
authors = ["you"]
license = ""
repository = ""
default-run = "sd"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
tauri = { version = "1.0.0-beta.5", features = ["api-all", "menu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rebind = "0.2.1"
data-encoding = "2.3.2"
ring = "0.17.0-alpha.10"
chrono = { version = "0.4.0", features = ["serde"] }
crossbeam = "0.8.1"
cargo-edit = "0.8.0"
sha256 = "1.0.2"
int-enum = "0.4.0"
rusqlite = "0.25.3"
refinery = { version = "0.6.0", features = ["rusqlite"] }
sqlx = { version = "0.5.7", features = ["sqlite"] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-async-std-rustls", "macros", "debug-print" ], default-features = false }
env_logger = "0.9.0"
# libusb = "0.3.0"
snafu = "0.6.10"
log = "0.4.14"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
